capitol page/css-additions.css
/*
You can add your own CSS here.

Click the help icon above to learn more.
*/

/* Caldera Forms css */ 
.caldera_forms_form {
    padding: 25px;
        padding-top: 25px;
        padding-right: 25px;
        padding-bottom: 25px;
        padding-left: 25px;
}
/* custom css related to Divi Upgrade 21 March 2017 */
.home #et-top-navigation {
    float: left;
    padding-bottom: 13px;
    padding-left: 20px !important;
    width: 97%;
}

.home #et-top-navigation {
    float: left;
    /* padding-bottom: 13px; */
    padding-left: 20px;
    width: 97%;
}

#top-menu li > a {
    color: #555555 !important;
    padding-bottom: 10px;
    text-decoration: none !important;
}

#top-menu li {
    display: inline-block;
    font-family: Verdana,Arial,sans-serif;
    font-size: 13px;
    padding-right: 12px;
}

#main-header .col2 {
    background-image: url("/wp-content/uploads/2014/06/capitol.png");
    background-position: right top;
    background-repeat: no-repeat;
    float: right;
    height: 240px;
    margin: 0;
    padding: 0;
    width: 70%;
}

.et_boxed_layout #page-container .container {
    margin: 0 auto;
    position: relative;
    text-align: left;
    width: 100%;
}

#top-menu .menu-item-has-children > a:first-child, #et-secondary-nav .menu-item-has-children > a:first-child {
    padding-right: 14px;
}

#et-top-navigation {
    font-weight: normal;
}

.et_header_style_left #et-top-navigation nav > ul > li > a, .et_header_style_split #et-top-navigation nav > ul > li > a {
    padding-bottom: 9px;
}

.et_header_style_left #et-top-navigation, .et_header_style_split #et-top-navigation {
    padding-top: 0;
}

.et_boxed_layout #page-container .et_pb_row {
    width: 100%;
}
#main-header nav#top-menu-nav {
    padding-top: 15px;
    margin-bottom: -19px;
    margin-left: 12px;
}

.nav li ul {
	top:0;
}

